cartopy/docs/v0.16/_sources/gallery/wmts.rst.txt


.. _sphx_glr_gallery_wmts.py:


Interactive WMTS (Web Map Tile Service)
---------------------------------------

This example demonstrates the interactive pan and zoom capability
supported by an OGC web services Web Map Tile Service (WMTS) aware axes.

The example WMTS layer is a single composite of data sampled over nine days
in April 2012 and thirteen days in October 2012 showing the Earth at night.
It does not vary over time.

The imagery was collected by the Suomi National Polar-orbiting Partnership
(Suomi NPP) weather satellite operated by the United States National Oceanic
and Atmospheric Administration (NOAA).

.. _examples-wmts:

Downloading and plotting tiles
==============================




.. image:: /gallery/images/sphx_glr_wmts_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs


    def main():
        url = 'https://map1c.vis.earthdata.nasa.gov/wmts-geo/wmts.cgi'
        layer = 'VIIRS_CityLights_2012'

        fig = plt.figure()
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())
        ax.add_wmts(url, layer)
        ax.set_extent([-15, 25, 35, 60], crs=ccrs.PlateCarree())

        ax.set_title('Suomi NPP Earth at night April/October 2012')
        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  2.276 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: wmts.py <wmts.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: wmts.ipynb <wmts.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
